...

      {/* Buscador */}
      <ThemedView style={styles.searchContainer}>
        <ThemedTextInput
          value={searchText}
          onChangeText={setSearchText}
          placeholder="Buscar parada por nombre o código..."
          style={styles.searchInput}
          leftIcon="search"
        />

        <ThemedView style={styles.filterButtons}>
          <ThemedButton
...
