...
          alignItems: 'center',
        },
      }}>
      <Tabs.Screen
        name="index"
        options={{
          title: 'Inicio',
          tabBarIcon: ({ color, focused }) => (
            <View style={{ height: 26, justifyContent: 'center', alignItems: 'center' }}>
              <Icon
                name={focused ? "home" : "home-outline"}
                library="ionicons"
                size={focused ? 26 : 24}
...
          tabBarStyle: { display: 'none' },
        }}
      />
      <Tabs.Screen
        name="alertas"
        options={{
          title: 'Alertas',
          tabBarIcon: ({ color, focused }) => (
            <View style={{ height: 26, justifyContent: 'center', alignItems: 'center' }}>
              <View style={{ position: 'relative' }}>
                <Icon
                  name={focused ? "notifications" : "notifications-outline"}
                  library="ionicons"
...
          ),
        }}
      />
      <Tabs.Screen
        name="favoritos"
        options={{
          title: 'Favoritos',
          tabBarIcon: ({ color, focused }) => (
            <View style={{ height: 26, justifyContent: 'center', alignItems: 'center' }}>
              <Icon
                name={focused ? "heart" : "heart-outline"}
                library="ionicons"
                size={focused ? 26 : 24}
...
